--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "implement-js": "0.0.31",
+    "lodash": "^4.17.21",
     "roundrobin": "^1.0.3"
   },
   "devDependencies": {
